<resources>
    <string name="app_name">KylinAudio</string>
    <string name="home_category_unlogin_desc_1">欢迎登录麒麟云音乐</string>
    <string name="home_category_unlogin_desc_2">手机电脑多端同步，尽享海量高品质音乐</string>
    <string name="home_category_login">立即登录</string>
    <string name="protocol_user_protocol">《用户协议》</string>
    <string name="protocol_privacy_policy">《隐私政策》</string>
    <string name="protocol_children_privacy_policy">《儿童隐私政策》</string>
    <string name="home_login_phone">手机号登录</string>
</resources>
