<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/home_title_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/home_category_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_category" /><!-- 菜单栏按钮 -->

            <TextView
                android:id="@+id/home_search_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_search" /><!-- 搜索按钮 -->

            <net.lucode.hackware.magicindicator.MagicIndicator
                android:id="@+id/home_magic_indicator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_toStartOf="@id/home_search_view"
                android:layout_toEndOf="@id/home_category_view" /><!-- viewpager指示器 -->

        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/home_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/home_title_layout" /> <!-- viewpager内容显示器 -->
    </RelativeLayout><!-- 内容显示 -->

    <RelativeLayout
        android:id="@+id/home_left_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginEnd="25dp"
        android:background="@color/color_white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- 抽屉登录区域 -->
                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/home_category_portrait"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/app_name"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/home_category_unlogin_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="@string/home_category_unlogin_desc_1"
                            android:textColor="@color/color_slategray"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="@string/home_category_unlogin_desc_2"
                            android:textColor="@color/color_slategray"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/home_category_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/home_category_login_background"
                            android:gravity="center"
                            android:paddingStart="40dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="40dp"
                            android:paddingBottom="5dp"
                            android:text="@string/home_category_login"
                            android:textColor="@color/color_white"
                            android:textSize="15sp" />
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout><!-- 抽屉显示 -->
</android.support.v4.widget.DrawerLayout>
